@@ -1419,7 +1419,7 @@
 	'S_CHART4_HEADER_TITLE_PART2'=>		'(year',
 	'S_CHART4_HEADER_TITLE_PART3'=>		')',
 	'S_CHART4_HEADER_DATE_FORMAT'=>		'Y',
-	'S_CHART4_TIMELINE_DATE_FORMAT'=>	'd.F',
+	'S_CHART4_TIMELINE_DATE_FORMAT'=>	'd.M',
 
 //	chart5.php
 	'S_CHART5_HEADER_TITLE_PART1'=>		'',
